--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,33 @@
 body {
   margin: 0;
-  font-family: system-ui;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e7f6ff;
+}
+
+* {
+  font-family: "Inter", system-ui;
+}
+
+.greenButton {
+  width: 100%;
+  border-radius: 18px;
+  height: 55px;
+  background: #9dd558;
+  border: 0;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: background-color 0.1s ease-in-out;
+
+  &:hover {
+    background: lighten($color: #9dd558, $amount: 5%);
+  }
+
+  &:active {
+    background: darken($color: #9dd558, $amount: 5%);
+  }
 }
 
 .wrapper {
@@ -32,34 +56,15 @@ header {
   }
 }
 
-.card {
+.searchBlock {
   border: 1px solid #f3f3f3;
-  padding: 20px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
+  border-radius: 10px;
+  padding: 0 15px;
 
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-  }
-
-  b {
-    font-size: 14px;
-  }
-
-  h5 {
-    font-weight: 400;
-    font-size: 14px;
-  }
-
-  .button {
-    box-sizing: border-box;
-    background: #ffffff;
-    border: 1px solid #f2f2f2;
-    border-radius: 8px;
-    height: 32px;
-    width: 32px;
-    cursor: pointer;
+  input {
+    border: 0;
+    padding: 13px;
+    font-size: 16px;
+    width: 200px;
   }
 }
