implement search functionality

--- a/src/index.scss
+++ b/src/index.scss
@@ -54,12 +54,27 @@ header {
   h1 {
     margin: 0;
   }
+
+  .mainItems {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 30px;
+  }
 }
 
 .searchBlock {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+
+  .clear {
+    position: absolute;
+    right: 10px;
+    top: 13px;
+    width: 18px;
+    height: 18px;
+  }
 
   input {
     border: 0;
