--- a/src/components/CardMain/CardMain.module.scss
+++ b/src/components/CardMain/CardMain.module.scss
@@ -1,9 +1,11 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   border: 1px solid #f3f3f3;
   padding: 20px;
-  width: 220px;
+  width: 100%;
   border-radius: 40px;
-  margin-right: 30px;
   transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
   &:hover {
@@ -31,12 +33,6 @@
   }
 
   .button {
-    box-sizing: border-box;
-    background: #ffffff;
-    border: 1px solid #f2f2f2;
-    border-radius: 8px;
-    height: 32px;
-    width: 32px;
     cursor: pointer;
   }
 }
