--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -1,92 +1,71 @@
-.drawer {
-  position: absolute;
+.overlay {
+  position: fixed;
   right: 0;
-  height: 100%;
-  width: 420px;
-  background: #ffffff;
-  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  // display: none;
+  // height: 100%;
 
-  h2 {
-    margin: 0;
-  }
+  .drawer {
+    position: fixed;
+    z-index: 10;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+    width: 420px;
+    background: #ffffff;
+    box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
 
-  .cartItems {
-    flex: 1;
-    overflow: auto;
-    margin-bottom: 40px;
+    h2 {
+      margin: 0;
+    }
 
-    .cartItem {
-      border: 1px solid #f3f3f3;
-      border-radius: 20px;
-      overflow: hidden;
-      padding: 20px;
+    .cartItems {
+      flex: 1;
+      overflow: auto;
+      margin-bottom: 40px;
+    }
 
-      .cartItemImg {
-        width: 70px;
-        height: 70px;
-        background-size: contain;
-        background-position: 0 -3px;
-        background-repeat: no-repeat;
-        margin-right: 20px;
+    .cartTotalBlock {
+      ul {
+        margin-bottom: 40px;
+
+        li {
+          display: flex;
+          align-items: flex-end;
+          margin-bottom: 20px;
+        }
+
+        div {
+          flex: 1;
+          height: 1px;
+          border-bottom: 1px dashed #dfdfdf;
+          position: relative;
+          top: -4px;
+          margin: 0 7px;
+        }
       }
 
-      p {
-        font-size: 16px;
-        margin: 0;
-      }
-
-      b {
-        font-size: 14px;
-      }
-
-      .removeBtn {
-        opacity: 0.5;
-        cursor: pointer;
-        transition: opacity 0.15s ease-in-out;
+      .greenButton {
+        position: relative;
 
         &:hover {
-          opacity: 1;
+          img {
+            transform: translateX(5px);
+          }
         }
-      }
-    }
-  }
 
-  .cartTotalBlock {
-    ul {
-      margin-bottom: 40px;
-
-      li {
-        display: flex;
-        align-items: flex-end;
-        margin-bottom: 20px;
-      }
-
-      div {
-        flex: 1;
-        height: 1px;
-        border-bottom: 1px dashed #dfdfdf;
-        position: relative;
-        top: -4px;
-        margin: 0 7px;
-      }
-    }
-
-    .greenButton {
-      position: relative;
-
-      &:hover {
         img {
-          transform: translateX(5px);
+          position: absolute;
+          right: 30px;
+          top: 20px;
+          transition: transform 0.15s ease-in-out;
         }
-      }
-
-      img {
-        position: absolute;
-        right: 30px;
-        top: 20px;
-        transition: transform 0.15s ease-in-out;
       }
     }
   }
