--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -25,6 +25,34 @@
       margin: 0;
     }
 
+    .cartEmpty {
+      text-align: center;
+
+      p {
+        width: 280px;
+        line-height: 24px;
+      }
+
+      .greenButton {
+        width: 245px;
+        margin-top: 20px;
+
+        &:hover {
+          img {
+            transform: rotate(180deg) translateX(3px);
+          }
+        }
+
+        img {
+          position: relative;
+          top: 1px;
+          transform: rotate(180deg);
+          margin-right: 15px;
+          transition: transform 0.15s ease-in-out;
+        }
+      }
+    }
+
     .cartItems {
       flex: 1;
       overflow: auto;
