--- a/src/index.scss
+++ b/src/index.scss
@@ -21,6 +21,11 @@ body {
   cursor: pointer;
   transition: background-color 0.1s ease-in-out;
 
+  &:disabled {
+    background-color: #bebebe;
+    cursor: default;
+  }
+
   &:hover {
     background: lighten($color: #9dd558, $amount: 5%);
   }
