--- a/src/components/Drawer/Drawer.module.scss
+++ b/src/components/Drawer/Drawer.module.scss
@@ -25,34 +25,6 @@
       margin: 0;
     }
 
-    .cartEmpty {
-      text-align: center;
-
-      p {
-        width: 280px;
-        line-height: 24px;
-      }
-
-      .greenButton {
-        width: 245px;
-        margin-top: 20px;
-
-        &:hover {
-          img {
-            transform: rotate(180deg) translateX(3px);
-          }
-        }
-
-        img {
-          position: relative;
-          top: 1px;
-          transform: rotate(180deg);
-          margin-right: 15px;
-          transition: transform 0.15s ease-in-out;
-        }
-      }
-    }
-
     .cartItems {
       flex: 1;
       overflow: auto;
@@ -81,18 +53,39 @@
 
       .greenButton {
         position: relative;
-
-        &:hover {
-          img {
-            transform: translateX(5px);
-          }
-        }
+        width: 100%;
+        border-radius: 18px;
+        height: 55px;
+        background: #9dd558;
+        border: 0;
+        color: #fff;
+        font-size: 16px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: background-color 0.1s ease-in-out;
 
         img {
           position: absolute;
           right: 30px;
           top: 20px;
           transition: transform 0.15s ease-in-out;
+        }
+
+        &:disabled {
+          background-color: #bebebe;
+          cursor: default;
+        }
+
+        &:hover {
+          background: lighten($color: #9dd558, $amount: 5%);
+
+          img {
+            transform: translateX(5px);
+          }
+        }
+
+        &:active {
+          background: darken($color: #9dd558, $amount: 5%);
         }
       }
     }
